# drf_course_work

./: Dockerfile  docker-compose.yml  pyproject.toml
config/: __init__.py  celery.py  settings.py  urls.py
habit_app/: models.py  serializers.py  tasks.py  tests.py  views.py
habit_app/migrations/: 0001_initial.py
